--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,45 +1,19 @@
-name: train-my-model
-
+name: CML
 on: [push]
-
 jobs:
-  run:
-    runs-on: [ubuntu-latest]
-
+  train-and-report:
+    runs-on: ubuntu-latest
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-
-      - uses: iterative/setup-cml@v1
-
-      - uses: iterative/setup-dvc@v1
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: cml
+      - name: Train model
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pip install -r requirements.txt
+          python train.py  # generate plot.png
 
-          # Pull dataset with DVC
-          dvc pull data
-
-          # Reproduce pipeline if any changes detected in dependencies
-          dvc repro
-
-          # Use DVC metrics diff to compare metrics to master
-          git fetch --prune --unshallow
-          dvc metrics diff --show-md master >> report.md
-
-          # Add figure to report
-          dvc plots diff --target loss.csv --show-vega master > vega.json
-          vl2png vega.json -s 1.3 > vega.png
-          echo '![](./vega.png)' >> report.md
-          cml comment create --pr --publish report.md
+          # Create CML report
+          cat metrics.txt >> report.md
+          echo '![](./plot.png "Confusion Matrix")' >> report.md
+          cml comment create report.md
