--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,5 +1,7 @@
 name: CML & DVC
+
 on: [push]
+
 jobs:
   train-and-report:
     runs-on: ubuntu-latest
@@ -19,6 +21,7 @@ jobs:
           pip install -r requirements.txt  # Install dependencies
           dvc pull data --run-cache        # Pull data & run-cache from S3
           dvc repro                        # Reproduce pipeline
+
       - name: Create CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -26,7 +29,8 @@ jobs:
           echo "## Metrics: workflow vs. main" >> report.md
           git fetch --depth=1 origin main:main
 
-          dvc metrics diff master --show-md >> report.md
+          dvc metrics diff main --show-md >> report.md
+
           echo "## Plots" >> report.md
           echo "### Class confusions" >> report.md
           dvc plots diff \
@@ -34,7 +38,7 @@ jobs:
             --template confusion \
             -x actual \
             -y predicted \
-            --show-vega master > vega.json
+            --show-vega main > vega.json
           vl2png vega.json -s 1.5 > plot.png
           echo '![](./plot.png "Confusion Matrix")' >> report.md
 
@@ -42,7 +46,7 @@ jobs:
           dvc plots diff \
             --target estimators.csv \
             -x Regularization \
-            --show-vega master > vega.json
+            --show-vega main > vega.json
           vl2png vega.json -s 1.5 > plot-diff.png
           echo '![](./plot-diff.png)' >> report.md
 
@@ -53,3 +57,4 @@ jobs:
           echo '![](./plot-loss.png "Training Loss")' >> report.md
 
           cml comment create report.md
+
