--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -13,10 +13,13 @@ jobs:
       - uses: iterative/setup-cml@v1
       - uses: iterative/setup-dvc@v1
       - name: Configure DVC remote
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           dvc remote add -d myremote s3://mybucket/path
-          dvc remote modify myremote access_key_id $AWS_ACCESS_KEY_ID
-          dvc remote modify myremote secret_access_key $AWS_SECRET_ACCESS_KEY
+          dvc remote modify myremote access_key_id "${AWS_ACCESS_KEY_ID}"
+          dvc remote modify myremote secret_access_key "${AWS_SECRET_ACCESS_KEY}"
       - name: Train model
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -60,3 +63,4 @@ jobs:
           echo '![](./plot-loss.png "Training Loss")' >> report.md
 
           cml comment create report.md
+
