--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,14 +16,17 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1' # Cambia esta región si tu bucket está en otra región
         run: |
           dvc remote add -d myremote s3://mybucket/path
           dvc remote modify myremote access_key_id "${AWS_ACCESS_KEY_ID}"
           dvc remote modify myremote secret_access_key "${AWS_SECRET_ACCESS_KEY}"
+          dvc remote modify myremote region "${AWS_DEFAULT_REGION}"
       - name: Train model
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1' # Asegúrate de que esta región coincide
         run: |
           pip install -r requirements.txt  # Install dependencies
           dvc pull data --run-cache        # Pull data & run-cache from S3
