--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,69 +1,40 @@
-name: CML & DVC
-
+name: model-training
 on: [push]
-
 jobs:
-  train-and-report:
+  run:
     runs-on: ubuntu-latest
+    container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - uses: iterative/setup-cml@v1
-      - uses: iterative/setup-dvc@v1
-      - name: Configure DVC remote
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'us-east-1' # Cambia esta región si tu bucket está en otra región
-        run: |
-          dvc remote add -d myremote s3://mybucket/path
-          dvc remote modify myremote access_key_id "${AWS_ACCESS_KEY_ID}"
-          dvc remote modify myremote secret_access_key "${AWS_SECRET_ACCESS_KEY}"
-          dvc remote modify myremote region "${AWS_DEFAULT_REGION}"
       - name: Train model
         env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'us-east-1' # Asegúrate de que esta región coincide
         run: |
-          pip install -r requirements.txt  # Install dependencies
-          dvc pull data --run-cache        # Pull data & run-cache from S3
-          dvc repro                        # Reproduce pipeline
-      - name: Create CML report
-        env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "## Metrics: workflow vs. main" >> report.md
-          git fetch --depth=1 origin main:main
+          # Install requirements
+          pip install -r requirements.txt
 
+          # Pull data & run-cache from S3 and reproduce pipeline
+          dvc pull data --run-cache
+          dvc repro
+
+          # Report metrics
+          echo "## Metrics" >> report.md
+          git fetch --prune
           dvc metrics diff main --show-md >> report.md
 
+          # Publish confusion matrix diff
           echo "## Plots" >> report.md
           echo "### Class confusions" >> report.md
-          dvc plots diff \
-            --target classes.csv \
-            --template confusion \
-            -x actual \
-            -y predicted \
-            --show-vega main > vega.json
-          vl2png vega.json -s 1.5 > plot.png
-          echo '![](./plot.png "Confusion Matrix")' >> report.md
+          dvc plots diff --target classes.csv --template confusion -x actual -y predicted --show-vega main > vega.json
+          vl2png vega.json -s 1.5 > confusion_plot.png
+          echo "![](./confusion_plot.png)" >> report.md
 
+          # Publish regularization function diff
           echo "### Effects of regularization" >> report.md
-          dvc plots diff \
-            --target estimators.csv \
-            -x Regularization \
-            --show-vega main > vega.json
-          vl2png vega.json -s 1.5 > plot-diff.png
-          echo '![](./plot-diff.png)' >> report.md
-
-          echo "### Training loss" >> report.md
-          dvc plots diff \
-            --target loss.csv --show-vega main > vega.json
-          vl2png vega.json > plot-loss.png
-          echo '![](./plot-loss.png "Training Loss")' >> report.md
+          dvc plots diff --target estimators.csv -x Regularization --show-vega main > vega.json
+          vl2png vega.json -s 1.5 > plot.png
+          echo "![](./plot.png)" >> report.md
 
           cml comment create report.md
-
