--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,40 +1,63 @@
-name: model-training
+name: CML & DVC
+
 on: [push]
+
 jobs:
-  run:
+  train-and-report:
     runs-on: ubuntu-latest
-    container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install DVC and pydrive2
+        run: |
+          pip install dvc[gs]
+          pip install pydrive2
+      - name: Configure DVC remote for Google Drive
+        run: |
+          dvc remote add -d myremote gdrive://<https://drive.google.com/drive/folders/1kloaCZQgL-YlOmNMeqxlUdsqwgBaXor-?usp=share_link>
+          dvc remote modify myremote gdrive_use_service_account true
+          dvc remote modify myremote gdrive_service_account_json_file_path <path_to_your_service_account_json_file>
       - name: Train model
         env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
         run: |
-          # Install requirements
-          pip install -r requirements.txt
+          pip install -r requirements.txt  # Install dependencies
+          dvc pull data --run-cache        # Pull data & run-cache from Google Drive
+          dvc repro                        # Reproduce pipeline
+      - name: Create CML report
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "## Metrics: workflow vs. main" >> report.md
+          git fetch --depth=1 origin main:main
 
-          # Pull data & run-cache from S3 and reproduce pipeline
-          dvc pull data --run-cache
-          dvc repro
-
-          # Report metrics
-          echo "## Metrics" >> report.md
-          git fetch --prune
           dvc metrics diff main --show-md >> report.md
 
-          # Publish confusion matrix diff
           echo "## Plots" >> report.md
           echo "### Class confusions" >> report.md
-          dvc plots diff --target classes.csv --template confusion -x actual -y predicted --show-vega main > vega.json
-          vl2png vega.json -s 1.5 > confusion_plot.png
-          echo "![](./confusion_plot.png)" >> report.md
-
-          # Publish regularization function diff
-          echo "### Effects of regularization" >> report.md
-          dvc plots diff --target estimators.csv -x Regularization --show-vega main > vega.json
+          dvc plots diff \
+            --target classes.csv \
+            --template confusion \
+            -x actual \
+            -y predicted \
+            --show-vega main > vega.json
           vl2png vega.json -s 1.5 > plot.png
-          echo "![](./plot.png)" >> report.md
+          echo '![](./plot.png "Confusion Matrix")' >> report.md
+
+          echo "### Effects of regularization" >> report.md
+          dvc plots diff \
+            --target estimators.csv \
+            -x Regularization \
+            --show-vega main > vega.json
+          vl2png vega.json -s 1.5 > plot-diff.png
+          echo '![](./plot-diff.png)' >> report.md
+
+          echo "### Training loss" >> report.md
+          dvc plots diff \
+            --target loss.csv --show-vega main > vega.json
+          vl2png vega.json > plot-loss.png
+          echo '![](./plot-loss.png "Training Loss")' >> report.md
 
           cml comment create report.md
