--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,10 +15,12 @@ jobs:
           pip install dvc[gs]
           pip install pydrive2
       - name: Configure DVC remote for Google Drive
+        env:
+          GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
         run: |
-          dvc remote add -d myremote gdrive://<https://drive.google.com/drive/folders/1kloaCZQgL-YlOmNMeqxlUdsqwgBaXor-?usp=share_link>
+          dvc remote add -d myremote gdrive://1kloaCZQgL-YlOmNMeqxlUdsqwgBaXor-
           dvc remote modify myremote gdrive_use_service_account true
-          dvc remote modify myremote gdrive_service_account_json_file_path <path_to_your_service_account_json_file>
+          dvc remote modify myremote gdrive_service_account_json_file_path $GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH
       - name: Train model
         env:
           GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
