--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,14 +16,15 @@ jobs:
           pip install pydrive2
       - name: Configure DVC remote for Google Drive
         env:
-          GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
+          GDRIVE_SERVICE_ACCOUNT_JSON: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
         run: |
+          echo "${GDRIVE_SERVICE_ACCOUNT_JSON}" > gdrive_service_account.json
           dvc remote add -d myremote gdrive://1kloaCZQgL-YlOmNMeqxlUdsqwgBaXor-
           dvc remote modify myremote gdrive_use_service_account true
-          dvc remote modify myremote gdrive_service_account_json_file_path $GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH
+          dvc remote modify myremote gdrive_service_account_json_file_path gdrive_service_account.json
       - name: Train model
         env:
-          GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
+          GDRIVE_SERVICE_ACCOUNT_JSON: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH }}
         run: |
           pip install -r requirements.txt  # Install dependencies
           dvc pull data --run-cache        # Pull data & run-cache from Google Drive
@@ -63,3 +64,4 @@ jobs:
           echo '![](./plot-loss.png "Training Loss")' >> report.md
 
           cml comment create report.md
+
