--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,64 +1,45 @@
-name: CML & DVC
+name: train-my-model
 
 on: [push]
 
 jobs:
-  train-and-report:
-    runs-on: ubuntu-latest
+  run:
+    runs-on: [ubuntu-latest]
+
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - uses: iterative/setup-cml@v1
+
+      - uses: iterative/setup-dvc@v1
+
+      - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - name: Install DVC and gdrive dependencies
-        run: |
-          pip install dvc[gdrive]
-      - name: Configure DVC remote for Google Drive
+
+      - name: cml
         env:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
-          echo "${GDRIVE_CREDENTIALS_DATA}" > gdrive_credentials.json
-          dvc remote add -d myremote gdrive://1kloaCZQgL-YlOmNMeqxlUdsqwgBaXor-
-          dvc remote modify myremote gdrive_service_account_json_file_path gdrive_credentials.json
-      - name: Train model
-        run: |
-          pip install -r requirements.txt  # Install dependencies
-          dvc pull data --run-cache        # Pull data & run-cache from Google Drive
-          dvc repro                        # Reproduce pipeline
-      - name: Create CML report
-        env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "## Metrics: workflow vs. main" >> report.md
-          git fetch --depth=1 origin main:main
+          pip install -r requirements.txt
 
-          dvc metrics diff main --show-md >> report.md
+          # Pull dataset with DVC
+          dvc pull data
 
-          echo "## Plots" >> report.md
-          echo "### Class confusions" >> report.md
-          dvc plots diff \
-            --target classes.csv \
-            --template confusion \
-            -x actual \
-            -y predicted \
-            --show-vega main > vega.json
-          vl2png vega.json -s 1.5 > plot.png
-          echo '![](./plot.png "Confusion Matrix")' >> report.md
+          # Reproduce pipeline if any changes detected in dependencies
+          dvc repro
 
-          echo "### Effects of regularization" >> report.md
-          dvc plots diff \
-            --target estimators.csv \
-            -x Regularization \
-            --show-vega main > vega.json
-          vl2png vega.json -s 1.5 > plot-diff.png
-          echo '![](./plot-diff.png)' >> report.md
+          # Use DVC metrics diff to compare metrics to master
+          git fetch --prune --unshallow
+          dvc metrics diff --show-md master >> report.md
 
-          echo "### Training loss" >> report.md
-          dvc plots diff \
-            --target loss.csv --show-vega main > vega.json
-          vl2png vega.json > plot-loss.png
-          echo '![](./plot-loss.png "Training Loss")' >> report.md
-
-          cml comment create report.md
-
-
+          # Add figure to report
+          dvc plots diff --target loss.csv --show-vega master > vega.json
+          vl2png vega.json -s 1.3 > vega.png
+          echo '![](./vega.png)' >> report.md
+          cml comment create --pr --publish report.md
