--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,7 +18,7 @@ jobs:
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           echo "${GDRIVE_CREDENTIALS_DATA}" > gdrive_credentials.json
-          dvc remote add -d myremote gdrive://1kloaCZQgL-YlOmNMeqxlUdsqwgBaXor-
+          dvc remote add -d myremote gdrive://1N6sZXtLBIzIpRTWPHRiq4CdA7_ymRPgv  # ID de la carpeta
           dvc remote modify myremote gdrive_service_account_json_file_path gdrive_credentials.json
       - name: Train model
         run: |
